May     3, 2003 : Otto Bruggeman
	* Fixed accel conflict
	* Moved Open Diff to the top of the menu

Apr    20, 2003 : Otto Bruggeman
	* Fixed bug 56322 (backport from head)

Jul    15, 2002 : Otto Bruggeman
	* Fixed normal diff a bit more, filenames dont work yet
	* Removed some code duplication
	* Fixed diff output parsing with Common subdirectories in it
	* Fixed Copyright years (thanks Carsten Niehaus)
	* Removed the KShellProcess and replaced it with a KProcess

Feb    18, 2002 : Otto Bruggeman
	* Fixed scrolling with a wheel mouse in the kompare(list)view and 
	  connectwidget and added a config option for the number of lines
	  that is scrolled per wheelscroll.
	* Fixed the history somehow in the compare dialog.
	* Implemented the separate directory/file widget.
	* Implemented reading from stdin by using - as file on the commandline.
	* Partly implemented a better way for ed and rcs parsing, i'll
	  improve this before KDE 3.0 is released

Jan    10, 2002 : Otto Bruggeman
	Comparing directories works now :) You can select them from the begin
	dialog, and select a directory and then press ok. It will enter the
	directory but dont select a file so it keeps the directory.
	Known bug here is that directories need a trailing slash :(

Oct    07, 2001 : Otto Bruggeman
	Fix crash when part is not found, basically dont use kapp->quit() 
	but use exit(int). Would be interested to know why it crashes though,
	the bt gave nothing meaningful here. I should have compiled kompare with
	debug code.

Sep    17/18, 2001 : Otto Bruggeman
	Fixed some stuff dont know what anymore (writing this on oct 7)
	Probably some more fixes for the klibloader.

Sep    17, 2001 : Otto Bruggeman
	Moved to kdesdk and renamed to kompare with preservation of history.
	Changed almost every occurence of kdiff to kompare (not in this file).

Sep    08, 2001 : Otto Bruggeman
	Removed the qt3back dir, changed everything over to qt3,
	qlist->qptrlist, qlistconstiterator->qptrlistconstiterator
